; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/compatlib/extr_informix.c_rjulmdy.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/compatlib/extr_informix.c_rjulmdy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rjulmdy(i32 %0, i16* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i16*, align 8
  %5 = alloca [3 x i32], align 4
  store i32 %0, i32* %3, align 4
  store i16* %1, i16** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = getelementptr inbounds [3 x i32], [3 x i32]* %5, i64 0, i64 0
  %8 = call i32 @PGTYPESdate_julmdy(i32 %6, i32* %7)
  %9 = getelementptr inbounds [3 x i32], [3 x i32]* %5, i64 0, i64 0
  %10 = load i32, i32* %9, align 4
  %11 = trunc i32 %10 to i16
  %12 = load i16*, i16** %4, align 8
  %13 = getelementptr inbounds i16, i16* %12, i64 0
  store i16 %11, i16* %13, align 2
  %14 = getelementptr inbounds [3 x i32], [3 x i32]* %5, i64 0, i64 1
  %15 = load i32, i32* %14, align 4
  %16 = trunc i32 %15 to i16
  %17 = load i16*, i16** %4, align 8
  %18 = getelementptr inbounds i16, i16* %17, i64 1
  store i16 %16, i16* %18, align 2
  %19 = getelementptr inbounds [3 x i32], [3 x i32]* %5, i64 0, i64 2
  %20 = load i32, i32* %19, align 4
  %21 = trunc i32 %20 to i16
  %22 = load i16*, i16** %4, align 8
  %23 = getelementptr inbounds i16, i16* %22, i64 2
  store i16 %21, i16* %23, align 2
  ret i32 0
}

declare dso_local i32 @PGTYPESdate_julmdy(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
